# ChatRoom

./: .gitignore  CMakeLists.txt  README.md
ChatRoom-Client/: .gitignore  ChatRoom-Client.csproj  ChatRoom-Client.sln  Directory.Build.props
ChatRoom-Client/Sources/Assets/: Resources.Designer.cs
ChatRoom-Client/Sources/Configs/: Resources.Designer.cs  Resources.resx
ChatRoom-Client/Sources/Forms/: AboutWindow.Designer.cs  ClientWindow.Designer.cs  ClientWindow.cs  ClientWindow.resx  ConfigWindow.Designer.cs  ConfigWindow.cs
ChatRoom-Server/: .gitignore  CMakeLists.txt
ChatRoom-Server/headers/: connection.h  server.h
ChatRoom-Server/include/: connection.h  server.h
ChatRoom-Server/sources/: connection.c  main.c  server.c
ChatRoom-Server/src/: connection.c  main.c  server.c
Client/: CMakeLists.txt  client.cpp  client.h  main.cpp
Client/Headers/: client.h
Client/Sources/: client.cpp  main.cpp
Server/: CMakeLists.txt  main.cpp  server.cpp  server.h
Server/Headers/: server.h
Server/Sources/: main.cpp  server.cpp
clients/: ChatRoom.csproj  ChatRoom.sln  Directory.Build.props
clients/Sources/: Program.cs
clients/Sources/Forms/: AboutWindow.cs  ClientWindow.Designer.cs  ClientWindow.cs  PropsWindow.Designer.cs  PropsWindow.cs
clients/Sources/Resources/: StringResources.Designer.cs
servers/: CMakeLists.txt
servers/sources/: connection.c  connection.h  main.c  server.c  server.h
